--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Layout from "@/layouts/Layout.astro";
+
 import HeroKeyLogo from "@/assets/hero-key-logo.webp";
 import HeroKeyBackground from "@/assets/hero-key-background.webp";
 import LogoVI from "@/assets/logo-vi.svg";
@@ -16,16 +17,63 @@ import LogoCutted from "@/assets/logo-cutted.svg";
             </picture>
         </section>
     </div>
+
     <div class="fixed flex flex-col items-center justify-between h-screen px-20 py-16 w-full">
         <header class="flex justify-between w-full">
-            <LogoVI class="size-11 text-white hover:text-yellow-100 transition-colors duration-200 cursor-pointer" />
+            <LogoVI class="size-11 text-white hover:text-yellow-100 transition-colors duration-500 cursor-pointer" />
         </header>
+
         <button class="absolute inset-0 m-auto cursor-pointer inline-block">
             <PlayButtonIcon id="hero-play-button" class="text-white m-auto size-32 mt-10 backdrop-blur-3xl rounded-full hover:scale-110 transition-transform duration-500" />
         </button>
+
         <footer id="hero-footer" class="absolute bottom-8 m-auto">
             <LogoCutted class="text-white w-38 drop-shadow-[0_0_2px_rgba(255,255,255,.5),0_0_8px_#000]" />
             <span class="absolute uppercase tracking-[6px] whitespace-nowrap text-center top-[49px] font-medium text-shadow-[0_0_2px_rgba(255,255,255,.5),0_0_8px_#000] left-1/2 -translate-x-1/2 text-lg"> Ver el Tráiler 2 </span>
         </footer>
     </div>
 </Layout>
+
+<style>
+    #logo-mask {
+        background: white;
+        mask-image: url("/logo-stack.svg");
+        mask-position: center 25%;
+        mask-repeat: no-repeat;
+        mask-size: clamp(4000vh, 3500%, 0vh);
+    }
+</style>
+
+<script>
+    import { gsap } from "gsap";
+    import { ScrollTrigger } from "gsap/ScrollTrigger";
+
+    gsap.registerPlugin(ScrollTrigger);
+
+    const tl = gsap.timeline({
+        ease: "power2.out",
+        scrollTrigger: {
+            scrub: 1,
+        },
+    });
+
+    tl.to("#hero-key", { duration: 1, scale: 1 })
+        .to("#hero-key-logo", { opacity: 0 }, "<")
+        .to("#hero-footer", { opacity: 0 }, "<")
+        .to("#hero-play-button", { opacity: 0 }, "<")
+        .to(
+            "#logo-mask",
+            {
+                maskSize: "clamp(20vh, 25%, 30vh)",
+            },
+            0.15
+        )
+        .to(
+            "#hero-key",
+            {
+                opacity: 0,
+                duration: 0.2,
+            },
+            0.4
+        );
+</script>
